fix alignment

--- a/_includes/normalize/components/accordion.css
+++ b/_includes/normalize/components/accordion.css
@@ -15,6 +15,8 @@ details {
 summary {
   --marker-image: url('data:image/svg+xml;charset=UTF-8,<svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="m8 9.586 5.293-5.293a1 1 0 1 1 1.414 1.414l-6 6a1 1 0 0 1-1.414 0l-6-6a1 1 0 0 1 1.414-1.414L8 9.586Z" fill="black"/></svg>');
 
+  display: flex;
+  align-items: center;
   padding: .7em;
   padding-left: 2em;
   min-height: 2.75em;
